# scholarle

./: .gitignore  README.md  alembic.ini  app.py  config.py  essay_coaching_service.py  essay_context.py  essay_editor_service.py  essay_mechanics.py  opportunity_analysis 2.py  prompt_adaptation.py  pyproject.toml  requirements.txt  revision_coach_service.py  server.py  unified_coaching_service.py
.claude/: launch.json
alembic/: env.py
api/: routes.py
backend_auth/: __init__.py  database.py  models.py  routes.py  security.py
chroma_db_profile/: chroma.sqlite3
data/: discovery_platform_library.json  field_expansion_cache 2.json  field_expansion_cache.json  scholarship_source_library.json
discovery/: __init__ 2.py  compatibility.py  deadlines 2.py  eligibility 2.py  evidence.py  intent_service.py  normalization 2.py  normalization.py  query_planner.py  ranking.py  schemas.py  taxonomy.py  web_search.py
education_catalog/: __init__.py  repository.py
frontend/: ScholarlE Engen.html  app.js  styles.css
frontend-react/: BACKEND_INTEGRATION.md  package-lock.json  package.json  vite.config.ts
graph/: builder.py  fit_builder.py  opportunity_builder.py  profile_builder.py  wiki_builder.py
llm/: client.py
nodes/: analyze.py  assemble.py  assemble_package.py  coach_application.py  coach_sections.py  combine.py  compliance.py  critic.py  essay_alignment.py  fit_analysis.py  generate.py  generation.py  insufficient.py  opportunity_extraction.py  prepare.py  profile_extraction.py  readiness_matrix.py  retrieve.py  review.py  routing.py  score.py  wiki_discovery.py  (+1 more)
(+130 files in other folders)
