[project]
name = "scholarle-engen"
version = "0.1.0"
dependencies = [
  "langchain",
  "langchain-community",
  "langchain-openai",
  "langchain-text-splitters",
  "langchain-chroma",
  "langgraph",
  "openai",
  "chromadb",
  "tiktoken",
  "pydantic",
  "python-dotenv",
  "pydantic-settings",
  "sqlalchemy",
  "alembic",
  "psycopg2-binary",
  "streamlit",
  "fastapi",
  "uvicorn[standard]",
  "pypdf",
  "python-multipart",
]
